--- a/Sport.Service/Web.config
+++ b/Sport.Service/Web.config
@@ -10,7 +10,7 @@
 	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-	<add name="MS_TableConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-Sport.Service-1425071034508.mdf;Initial Catalog=aspnet-Sport.Service-4311160607034508;Integrated Security=True;MultipleActiveResultSets=True;User Instance=True" providerName="System.Data.SqlClient" />
+	<add name="MS_TableConnectionString" connectionString="Overridden by portal settings" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
 	<add key="PreserveLoginUrl" value="true" />
