Stand up XQA backend services
And make changes to point to them.

Resource.designer.cs update

Update Bundle ID and Package ID

Prepare mobile apps with new back end and scripts for app center

move app center pre build script

Fix pre build scripts

Fix pre build scripts to work on macOS

update GCM sender id

--- a/Sport.Mobile.Droid/Sport.Mobile.Droid.csproj
+++ b/Sport.Mobile.Droid/Sport.Mobile.Droid.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Sport.Mobile.Droid</RootNamespace>
     <AssemblyName>Sport.Mobile.Droid</AssemblyName>
-    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -19,7 +19,8 @@
     <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
-    <AndroidTlsProvider></AndroidTlsProvider>
+    <AndroidTlsProvider>
+    </AndroidTlsProvider>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -35,14 +36,14 @@
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
     <Debugger>Xamarin</Debugger>
     <AndroidSupportedAbis>arm64-v8a;armeabi;armeabi-v7a;x86;x86_64</AndroidSupportedAbis>
-<AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
-<AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
-<AndroidTlsProvider>btls</AndroidTlsProvider>
-<AndroidKeyStore>True</AndroidKeyStore>
-<AndroidSigningKeyStore>$(ProjectDir)Resources\Security\androiddebugkey.keystore</AndroidSigningKeyStore>
-<AndroidSigningStorePass>android</AndroidSigningStorePass>
-<AndroidSigningKeyAlias>androiddebugkey</AndroidSigningKeyAlias>
-<AndroidSigningKeyPass>android</AndroidSigningKeyPass>
+    <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
+    <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
+    <AndroidTlsProvider>btls</AndroidTlsProvider>
+    <AndroidKeyStore>True</AndroidKeyStore>
+    <AndroidSigningKeyStore>$(ProjectDir)Resources\Security\androiddebugkey.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>android</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>androiddebugkey</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>android</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
