--- a/Sport.Mobile.iOS/Info.plist
+++ b/Sport.Mobile.iOS/Info.plist
@@ -52,7 +52,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.xamarin.sport.public</string>
+	<string>com.xamarin.sport.xqa</string>
 	<key>CFBundleShortVersionString</key>
 	<string>2.0</string>
 	<key>CFBundleVersion</key>
