--- a/Sport.Mobile.Droid/packages.config
+++ b/Sport.Mobile.Droid/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="AndHUD" version="1.2.0" targetFramework="MonoAndroid60" />
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="monoandroid60" />
-  <package id="Clancey.SimpleAuth" version="1.0.48" targetFramework="monoandroid81" />
+  <package id="Clancey.SimpleAuth" version="1.0.49" targetFramework="monoandroid81" />
+  <package id="Clancey.SimpleAuth.Droid.CustomTabs" version="1.0.0" targetFramework="monoandroid81" />
   <package id="Microsoft.Azure.Mobile" version="0.12.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.12.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Client" version="3.1.0" targetFramework="monoandroid60" />
@@ -84,6 +85,7 @@
   <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="25.3.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Design" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
