--- a/Sport.Mobile.Droid/packages.config
+++ b/Sport.Mobile.Droid/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="AndHUD" version="1.2.0" targetFramework="MonoAndroid60" />
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="monoandroid60" />
-  <package id="Clancey.SimpleAuth" version="1.0.40" targetFramework="monoandroid71" />
-  <package id="Clancey.SimpleAuth.Google.Droid" version="1.0.8" targetFramework="monoandroid71" />
+  <package id="Clancey.SimpleAuth" version="1.0.49" targetFramework="monoandroid81" />
+  <package id="Clancey.SimpleAuth.Droid.CustomTabs" version="1.0.1" targetFramework="monoandroid81" />
   <package id="Microsoft.Azure.Mobile" version="0.12.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.12.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Client" version="3.1.0" targetFramework="monoandroid60" />
@@ -18,7 +18,7 @@
   <package id="modernhttpclient" version="2.4.2" targetFramework="monoandroid60" />
   <package id="NControl" version="0.9.1.0" targetFramework="monoandroid60" />
   <package id="NControl.Controls" version="0.9.4.1" targetFramework="monoandroid60" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid60" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid81" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid60" />
   <package id="NGraphics" version="0.4.0" targetFramework="monoandroid60" />
   <package id="SkiaSharp" version="1.58.0" targetFramework="monoandroid71" />
@@ -79,12 +79,13 @@
   <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Version" version="1.0.0.0" targetFramework="MonoAndroid60" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid60" />
-  <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="25.3.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Design" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
